2012-11-02  Pedro Vicente  <pvicente@uci.edu>

	* ncks regression test #28: Extract coordinate variables

	* ncks: nco_var_lst_crd_add_trv: Add all coordinates to extraction list 

2012-11-02  Charlie Zender  <zender@uci.edu>

 	* NCO 4.2.3 release procedure:
 	Changes since nco-4_2_2: nothing yet
	cd ~/nco;cvs tag -d nco-4_2_3;cvs tag -d nco-4_2_3-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.3 release"
	cvs tag -c nco-4_2_3;cvs tag -c nco-4_2_3-1

	* Add Output Group Editing (OGE) structures

2012-11-01  Pedro Vicente  <pvicente@uci.edu>

	* ncks regression test #26: Extract group attributes

	* ncks regression test #27: Extract global attributes

	* ncks: nco_grp_var_mk_trv: Create groups/write variables in output file

2012-10-31  Charlie Zender  <zender@uci.edu>

	* ncflint: verify output type is float when interpolating between two packed floats

2012-10-29  Charlie Zender  <zender@uci.edu>

 	* NCO 4.2.2 release procedure:
 	Changes since nco-4_2_1: ncks groups, hdr_pad, NULs, _'s, ncecat GAG
	cd ~/nco;cvs tag -d nco-4_2_2;cvs tag -d nco-4_2_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.2 release"
	cvs tag -c nco-4_2_2;cvs tag -c nco-4_2_2-1

2012-10-28  Pedro Vicente  <pvicente@uci.edu>

	* ncks regression test #24: Hyperslabs (test -d with -v and -g)

	* ncks regression test #25: Dimensions (test -v dimension)

2012-10-27  Pedro Vicente  <pvicente@uci.edu>

	* ncks regression test #22: Extract variables in groups (test -g with -v)

	* ncks regression test #23: Create variables in groups (test -G with -v and -g)

2012-10-26  Charlie Zender  <zender@uci.edu>

	* ncecat: Copy global attributes of first file to root of output file

	* Place nco_hst_att_cat() after nco4_grp_lst_mk() so appending history command works

2012-10-25  Pedro Vicente  <pvicente@uci.edu>

	* nco_def_grp_flg() used in nco4_grp_lst_mk_itr() for append mode

2012-10-24  Pedro Vicente  <pvicente@uci.edu>

	* xtr_lst_fnd() finds full variable name in extraction list
